[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
operator = { path = "../operator" }
async-trait = "0.1.77"
dotenv = "0.15.0"
futures-util = "0.3.30"
lazy_static = "1.5.0"
pingora = { version = "0.1.0", features = ["proxy"] }
pingora-limits = "0.1.0"
regex = "1.10.3"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.10"
prometheus = "0.13.3"
notify = "6.1.1"
bytes = "1.5.0"
pingora-cache = { version = "0.1.0"}
pingora-core = { version = "0.1.0"}
pingora-error = { version = "0.1.0"}
pingora-proxy = { version = "0.1.0"}
redb = "1.5.0"
once_cell = "1"
parking_lot = "0.12.1"
thiserror = "1.0.50"

[dev-dependencies]
tempfile = "3.10.1"
rustracing = "0.5.1"
